index.css
body {
    background-color: lightgrey;
    font-family: 'Roboto Slab',
    serif;
}

h1 {
    padding: 0;
    margin-top: 0px;
    font-size: 5em;
    color: black;
    text-shadow: -1px 0 black,
    0 1px black,
    1px 0 white,
    0 -1px lightgrey;
    
}

h2 {
    padding: 1%;
    margin-top: 0px;
    font-size: 2.5em;
    color: black;
    text-shadow: -1px 0 black,
    0 1px black,
    1px 0 white,
    0 -1px lightgrey;
}

p {
    padding: 2%;
    margin-left: 1%;
    font-size: 1.5em;
    color: white;
    text-shadow: -1px 0 black,
    0 1px black,
    1px 0 black,
    0 -1px black;
}


.fa-github{
    color: #6e5494;
}

.fa-linkedin{
    color: #0077b5;
}

.fa-instagram{
    color: #f56040;
}

.welcome{
    padding-top: 10vh;
}

.block-main{
    background-color: rgba(211, 211, 211, 0.73);
    padding: 3vh;
    width: 80vw;
    border-radius: 10px;
    margin: 0 auto;
    margin-top: 10vh;
    margin-bottom: 3vh;
    font-size: 1.8vw;

}

/* Hamburger */
.logo {
    margin-left: 3vw;
}

.ham {
    text-align: right;
    height: 10vh;
    line-height: 10vh;
    font-family: 'Roboto Slab',
    serif;
    font-size: 3vh;
    background-color: lightgrey;
    border-bottom: 1px solid #b5cde1;
    opacity: 0.8;
}

.menu {
    margin: 0 5vw 0 0;
}

.menu a {
    clear: right;
    text-decoration: none;
    background-color: lightgrey;
    margin: 0 3vh;
    line-height: 10vh;
}

label {
    margin: 0 5vw 0 0;
    font-size: 3vh;
    line-height: 10vh;
    display: none;
    width: 5vw;
    float: right;
}

#toggle {
    display: none;
}

@media only screen and (max-width: 768px) {
    label {
        display: block;
        cursor: pointer;
    }
   
    .menu {
        text-align: center;
        width: 100%;
        display: none;
    }
    .menu a {
        display: block;
        border-bottom: 1px solid #b5cde1;
        margin: 0;
    }
    #toggle:checked + .menu {
        display: block;
    }
}

.nav-pills{
    font-family: 'Roboto Slab', serif;
    font-size: 3vh;
    background-color: lightgrey;
    opacity: 0.8;
    /* margin-bottom: 10%; */
}

.pageOne{
    background-image: url(img/BP3.JPG);
    background-size: cover;
    height: 100vh;
    width: 100vw;
    /* padding-top: 10vh; */
    padding-bottom: 3vh;
    font-size: 2vw;
}

.pageTwo{
    background-image: url(img/BP4.JPG);
    background-size: cover;
    /* height: 100vh; */
    width: 100vw;
    /* padding-top: 10vh */
    padding: 4vh;
    font-size: 2vh;
    padding-bottom: 20vh;
    
}

.pageThree{
    background: linear-gradient(to right, #b5cde1, slategrey);
    /* height: 100vh; */
    width: 100vw;
    padding-top: 10vh;
    /* font-size: 2vw; */
}

.portfolio{
    background-color: rgba(211, 211, 211, 0.73);
    /* padding: 6vh; */
    width: 40vw;
    border-radius: 10px;
    margin: 0 auto;
    margin-bottom: 3vh;
}

.skills{
    font-size: 7vh;
    padding: 1.5vh;
    background-color: rgba(211, 211, 211, 0.73);
    /* height: 30vh; */
    width: 40vw;
    border-radius: 10px;
    margin: 0 auto;
}

.pageFour{
    background-image: url(img/BP2.JPG);
    background-size: cover;
    height: 100vh;
    width: 100vw;
    padding-top: 15vh;
    
}

.contact{
    background-color: rgba(211, 211, 211, 0.73);
    padding: 3vh;
    width: 50vw;
    border-radius: 10px;
    margin: 0 auto;
    margin-bottom: 5vh;
    font-size: 2vh;
}

.btnList{
    /* margin-left: 25px; */
}

.btn-default{
    background-color: lightgrey;
    border-color: black;
    font-size: 3vh;
    padding: 1vh;


}

.btn-default:hover{
    background-color: black;
    color: white;
}

.profile{
    border-radius: 100%;
    height: 35vh;
    /* width: 35vw; */
}

.sites {
    border-radius: 10%;
    height: 35vh;
    width: 35vh;
    padding: 1vh;
    margin-bottom: 10vh;
}

.footer {
    padding: 1vh;
    margin-top: 0px;
    font-size: 1vh;
    color: black;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 white, 0 -1px lightgrey;
}

